<resources>
    <string name="app_name">DropWords</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Start_the_Game">Начать игру</string>
    <string name="Settings">Параметры игры</string>

    <string name="Statistics">Статистика</string>


    <string name="Speed">Скорость</string>
    <string name="Total_reset">Сбросить</string>
    <string name="ressets">прогресс</string>

    <string name="Game_standart">Стандартная игра</string>
    <string name="Game_time">Игра на время</string>
    <string name="Game_no_idea">В разработке</string>
    <string name="Game_language">Игра на английском языке (необходма покупка 5$)</string>
    <string name="Back">Назад</string>

    <string name="Fast">Быстро</string>
    <string name="Medium">Стандартно</string>
    <string name="Slow">Медленно</string>

    <string name="Reset_no">Нет</string>
    <string name="Reset_yes">Да</string>

    <string name="Missions">Миссии</string>

    <string name="score_5">5</string>
    <string name="score_10">10</string>
    <string name="score_15">15</string>

    <string name="achives">Собрать слова: </string>

    <string name="speed_game">Скорость игры</string>
    <string name="type_game">Режим игры</string>

    <string name="lang">Русский</string>

    <string name="standart">Стандартная</string>
    <string name="onTime">На время</string>
    <string name="bells">Уведомления</string>
    <string name="recent">Оставить</string>
    <string name="recent2">отзыв</string>

    <string name="word_all">/3141</string>

    <string name="word_3">/511</string>
    <string name="word_4">/765</string>
    <string name="word_5">/792</string>
    <string name="word_6">/534</string>
    <string name="word_7">/307</string>
    <string name="word_8">/158</string>
    <string name="word_9">/40</string>
    <string name="word_10">/21</string>
    <string name="word_11">/1</string>
    <string name="word_12">/12</string>
    <string name="word_13">/5</string>
    <string name="word_14">/3</string>


</resources>
