<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Missions">

    <Button
        android:id="@+id/butClose_mission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/title_mission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Missions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/about_mission"
        android:layout_below="@+id/title_mission"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textSize="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:text="В разработке!!!!"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/mis_1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/about_mission"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/mis_score_1"
            android:text="@string/score_5"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/mis_1"
            android:layout_below="@+id/about_mission"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textAlignment="center"/>

    <TextView
        android:id="@+id/mis_2"
        android:layout_below="@+id/mis_1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/mis_score_2"
            android:text="@string/score_10"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/mis_2"
            android:layout_below="@+id/mis_score_1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textAlignment="center"/>

    <TextView
        android:id="@+id/mis_3"
        android:layout_below="@+id/mis_2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/mis_score_3"
            android:text="@string/score_15"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/mis_3"
            android:layout_below="@+id/mis_score_2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textAlignment="center"/>

</RelativeLayout>
